added all the files

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,24 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
     <title>Login Page</title>
   </head>
   <body>
     <div class="LogIn">
       <h2>Login Page</h2>
+
+      <!-- Section to display flashed messages -->
+      {% with messages = get_flashed_messages() %} {% if messages %}
+      <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %} {% endwith %}
+
       <form method="POST">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required /><br /><br />
+        <input type="text" id="username" name="username" required /><br />
+
         <label for="password">Password:</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          required
-        /><br /><br />
+        <input type="password" id="password" name="password" required /><br />
+
         <input type="submit" value="Login" />
       </form>
+
+      <a class="button" href="{{ url_for('signup') }}">Sign Up</a>
     </div>
-    <a class="signin" href="{{ url_for('signin') }}"> Sign in</a>
   </body>
 </html>
